syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "github.com/watariRyo/balance/server/proto";

// use user schema
message GetUserRequest {
    string user_id = 1;
    string sessoin_id = 2;
}

message GetUserResponse {
    string user_id = 1;
    bool is_privacy_checked  = 2;
}


message RegisterUserRequest {
    string user_id = 1;
    string password = 2;
}

message RegisterUserResponse {
    string user_id = 1;
    string session_id = 2;
    string access_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    string refresh_token = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message UpdateUserRequest {
    string user_id = 1;
    string password = 2;
    string sessoin_id = 3;
}

message UpdateUserResponse {
    string user_id = 1;
    bool is_privacy_checked  = 2;
}

message DeleteUserRequest {
    string user_id = 1;
    string sessoin_id = 2;
}

message DeleteUserResponse {
    string user_id = 1;
}

message LoginUserRequest {
    string user_id = 1;
    string password = 2;
}

message LoginUserResponse {
    string user_id = 1;
    string session_id = 2;
    string access_token = 3;
    google.protobuf.Timestamp access_token_expires_at = 4;
    string refresh_token = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;
}

message LogoutUserRequest {
    string user_id = 1;
    string sessoin_id = 2;
}

message LogoutUserResponse {
    string user_id = 1;
}

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/balance/api/user/{user_id}"
        };
    };
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {
        option (google.api.http) = {
            post: "/balance/api/user",
            body: "*"
        };
    };
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
        option (google.api.http) = {
            put: "/balance/api/user",
            body: "*"
        };
    };
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/balance/api/user",
        };
    };
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/balance/login",
            body: "*"
        };
    };
    rpc LogoutUser (LogoutUserRequest) returns (LogoutUserResponse) {
        option (google.api.http) = {
            post: "/balance/logout",
            body: "*"
        };
    };
}